--- a/Frontend/chipper/src/App.css
+++ b/Frontend/chipper/src/App.css
@@ -1,3 +1,10 @@
 *{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+.logo {
+  margin-right: 10px; /* Space between logo and text */
+}
+
+h1 {
+  background-color: #d2f0c7; /* Light green background */
+}
